# se-toolkit-hackathon

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  Dockerfile.client  Dockerfile.simple  LICENSE  README.md  bot.py  clean_test.py  docker-compose.yml  jokes.json  pyproject.toml  reset_ratings.py  web_bot.py
caddy/: Caddyfile
client/: index.html  nginx.conf
src/app/: jokes.py  main.py  run.py  settings.py
src/app/routers/: jokes.py
src/static/: app.js  index.html  style.css
templates/: help.html  index.html  pending.html  submit.html
